--- a/src/app/history/history.page.html
+++ b/src/app/history/history.page.html
@@ -1,9 +1,19 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>history</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>History</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-list>
+    <ion-item *ngFor="let item of historyItems" class="items" [routerLink]="['../history-detail', item.id]">
+      <ion-label>
+        <h3>{{ item.item.name }}</h3>
+        <p>{{ item.quantity }}</p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
