--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,90 +1,98 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-title>Cash Register</ion-title>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content [fullscreen]="true">
-  <ion-grid>
+  <ion-grid id="main">
     <ion-row>
-      <ion-col>
-        Shoes
+      <ion-col size="6">
+        <p *ngIf="!selectedItem; else itemElseBlock">Item</p>
+        <ng-template #itemElseBlock> {{ selectedItem.name }}</ng-template>
       </ion-col>
       <ion-col size="6">
-        <ion-button color="danger">Manager</ion-button>
+        <ion-button expand="block" color="danger" [routerLink]="['/manager']">Manager</ion-button>
       </ion-col>
     </ion-row>
 
     <ion-row>
-      <ion-col>
-        <ion-button color="primary" (click)="onButtonClick('1')">1</ion-button>
+      <ion-col size="3">
+        <ion-button color="light" expand="block" (click)="onButtonClick('1')">1</ion-button>
       </ion-col>
-      <ion-col>
-        <ion-button color="primary" (click)="onButtonClick('2')">2</ion-button>
+      <ion-col size="3">
+        <ion-button color="light" expand="block" (click)="onButtonClick('2')">2</ion-button>
       </ion-col>
-      <ion-col>
-        <ion-button color="primary" (click)="onButtonClick('3')">3</ion-button>
+      <ion-col size="3">
+        <ion-button color="light" expand="block" (click)="onButtonClick('3')">3</ion-button>
       </ion-col>
-      <ion-col>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col>
-        <ion-button color="primary" (click)="onButtonClick('4')">4</ion-button>
-      </ion-col>
-      <ion-col>
-        <ion-button color="primary" (click)="onButtonClick('5')">5</ion-button>
-      </ion-col>
-      <ion-col>
-        <ion-button color="primary" (click)="onButtonClick('6')">6</ion-button>
-      </ion-col>
-      <ion-col>
-        <ion-button color="danger">Buy</ion-button>
+      <ion-col size="3">
+        <p *ngIf="total === 0; else totalElseBlock">Total</p>
+        <ng-template #totalElseBlock> {{ total | number }}</ng-template>
       </ion-col>
     </ion-row>
 
     <ion-row>
-      <ion-col>
-        <ion-button color="primary" (click)="onButtonClick('7')">7</ion-button>
+      <ion-col size="3">
+        <ion-button color="light" expand="block" (click)="onButtonClick('4')">4</ion-button>
       </ion-col>
-      <ion-col>
-        <ion-button color="primary" (click)="onButtonClick('8')">8</ion-button>
+      <ion-col size="3">
+        <ion-button color="light" expand="block" (click)="onButtonClick('5')">5</ion-button>
       </ion-col>
-      <ion-col>
-        <ion-button color="primary" (click)="onButtonClick('9')">9</ion-button>
-      </ion-col>
-      <ion-col>
+      <ion-col size="3">
+        <ion-button color="light" expand="block" (click)="onButtonClick('6')">6</ion-button>
       </ion-col>
     </ion-row>
 
     <ion-row>
-      <ion-col>
+      <ion-col size="3">
+        <ion-button color="light" expand="block" (click)="onButtonClick('7')">7</ion-button>
+      </ion-col>
+      <ion-col size="3">
+        <ion-button color="light" expand="block" (click)="onButtonClick('8')">8</ion-button>
+      </ion-col>
+      <ion-col size="3">
+        <ion-button color="light" expand="block" (click)="onButtonClick('9')">9</ion-button>
+      </ion-col>
+      <ion-col size="3">
         <p *ngIf="quantity === ''; else elseBlock">Quantity</p>
         <ng-template #elseBlock> {{ quantity }}</ng-template>
-        
       </ion-col>
-      <ion-col>
-        <ion-button color="primary" (click)="onButtonClick('0')">0</ion-button>
+    </ion-row>
+
+    <ion-row>
+      <ion-col size="3">
+        <ion-button color="primary" (click)="onClearButton()">Clear</ion-button>
+      </ion-col>
+      <ion-col size="3">
+        <ion-button color="light" expand="block" (click)="onButtonClick('0')">0</ion-button>
       </ion-col>
     </ion-row>
 
     <ion-row>
       <ion-col>
-        <ion-list>
-          <ion-item *ngFor="let item of items">
-            <ion-grid>
-              <ion-row>
-                <ion-col>
-                  <ion-label>{{ item.name }}</ion-label>
-                </ion-col>
-                <ion-col>
-                  <ion-label>{{ item.quantity }}</ion-label>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col>
-                  <ion-label>{{ item.price }}</ion-label>
-                </ion-col>
-              </ion-row>
-            </ion-grid>
-          </ion-item>
-        </ion-list>
+        <ion-button expand="block" (click)="onBuyButton()" color="danger">Buy</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
+
+  <ion-list>
+    <ion-item *ngFor="let item of items" (click)="onItemSelect(item)">
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <ion-label>{{ item.name }}</ion-label>
+          </ion-col>
+          <ion-col>
+            <ion-label class="itemQuantity">{{ item.quantity }}</ion-label>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-label class="itemPrice">${{ item.price }}</ion-label>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-item>
+  </ion-list>
 </ion-content>
