--- a/src/app/manager/manager.page.html
+++ b/src/app/manager/manager.page.html
@@ -1,9 +1,19 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>manager</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>Management View</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content padding>
+  <ion-grid>
+    <ion-row>
+      <ion-col id="content" size="6">
+        <ion-button expand="block" [routerLink]="['../history']">History</ion-button>
+        <ion-button expand="block" [routerLink]="['../restock']">Restock</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
